--- a/GNA_FTPwatchdog.csproj
+++ b/GNA_FTPwatchdog.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Twilio" Version="7.14.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\GNAtools\GNAtools\GNAtools.csproj" />
+    <ProjectReference Include="..\..\GNA_CommercialLicenseValidator\GNA_CommercialLicenseValidator\GNA_CommercialLicenseValidator.csproj" />
+  </ItemGroup>
+
 </Project>
